adding connect endpoint
